--- a/resume.hbs
+++ b/resume.hbs
@@ -453,11 +453,7 @@
 					{{#each resume.awards}}
 						<header class="clear">
 							<span class="space-left">
-								{{#if @first}}
-									<span class="fa fa-caret-down"></span>
-								{{else}}
-									<span class="fa fa-caret-right"></span>
-								{{/if}}
+									<span class="fa fa-thumb-tack"></span>
 							</span>
 							<div class="header-left">
 								{{#if title}}
@@ -518,6 +514,68 @@
 											{{else}}
 												{{name}}
 										  {{/if}}
+										</span>
+									{{/if}}
+									{{#if publisher}}
+										<span class="publisher">
+											in {{publisher}}
+										</span>
+									{{/if}}
+								</div>
+								{{#if releaseDate}}
+									<span class="date">
+										{{DMY releaseDate}}
+									</span>
+								{{/if}}
+							</header>
+							{{#if keywords.length}}
+								<ul class="keywords">
+									{{#each keywords}}
+										<li>{{.}}</li>
+									{{/each}}
+								</ul>
+							{{/if}}
+							{{#if @first}}
+								<div class="item display" style="opacity:1">
+							{{else}}
+								<div class="item display none" style="opacity:0">
+							{{/if}}
+								{{#if summary}}
+								<div class="summary">
+									<p>{{paragraphSplit summary}}</p>
+								</div>
+								{{/if}}
+							</div>
+						{{/each}}
+					</section>
+				</section>
+			{{/if}}
+
+			{{#if resume.achievements.length}}
+				<section class="section">
+					<header>
+						<h2 class='section-title'>Achievements</h2>
+					</header>
+					<section id="achievements">
+						{{#each resume.achievements}}
+							<header class="clear">
+								<span class="space-left">
+								{{#if @first}}
+									<span class="fa fa-caret-down"></span>
+								{{else}}
+									<span class="fa fa-caret-right"></span>
+								{{/if}}
+								</span>
+								<div class="header-left">
+									{{#if name}}
+										<span class="name">
+											{{#if website}}
+											<span class="website">
+												<a href="{{website}}">{{name}}</a>
+											</span>
+											{{else}}
+												{{name}}
+											{{/if}}
 										</span>
 									{{/if}}
 									{{#if publisher}}
