added month to the awards date

--- a/resume.hbs
+++ b/resume.hbs
@@ -469,7 +469,7 @@
 							</div>
 							{{#if date}}
 								<div class="date">
-									{{Y date}}
+									{{MY date}}
 								</div>
 							{{/if}}
 						</header>
