added more templates

--- a/resume.hbs
+++ b/resume.hbs
@@ -21,6 +21,8 @@
     {{> education }}
     {{> awards }}
     {{> publications }}
+    {{> achievements }}
+    {{> openSourceContributions }}
     {{> languages }}
     {{> interests }}
     {{> references }}
