--- a/theme/partials/achievements.hbs
+++ b/theme/partials/achievements.hbs
@@ -7,6 +7,7 @@
     {{#each resume.achievements}}
     <section class="volunteer-item">
       {{.}}
+    {{/each}}
   </section>
 </section>
 {{/if}}
